# gdext-template

./: .gdextension  .gitignore  CMakeLists.txt  CMakeUserPresets.json.example  README.md
gdextension/: CMakeLists.txt  template.gdextension.in
gdextension-config/: CMakeLists.txt  template.gdextension.in
src/: example.cpp  example.h  register_types.cpp  register_types.h
